--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First Api for Website",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon start",
+    "start": "nodemon start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "sharp": "^0.33.2"
   }
 }
