Fix: Rolebased Access

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ SUPER_ADMIN_PASS=superadminpassword
 ROLE= superadmin
 EMAIL=info@paradiseit.com.np
 PORT=4000
+PASS= $uBK3p#!Br5y6i6
+MONGODB_PASS=p9TnQCpulXQPf1OK
+MONGODB=mongodb+srv://info:p9TnQCpulXQPf1OK@pradiseit.znfgj5n.mongodb.net/giec
