Fix: Update Data  with or with Images and other fields

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ PORT=4000
 PASS= $uBK3p#!Br5y6i6
 MONGODB_PASS=p9TnQCpulXQPf1OK
 MONGODB=mongodb+srv://info:p9TnQCpulXQPf1OK@pradiseit.znfgj5n.mongodb.net/giec
+# MONGODB=localhost://27017/rightoptions
